--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
 </head>
 <script src="main.js" defer></script>
 <body>
-    <div class="score">
-        <div class="x-team">
-            <p>X team</p>
-            <p class="x-score"> 0 </p>
+    <h1> Tic-Tac-Toe </h1>
+    <div class="container">
+        <div class="score">
+            <div class="x-team">
+                <p>X Player</p>
+                <p class="x-score"> 0 </p>
+            </div>
+            <hr>
+            <div class="o-team">
+                <p>O Player</p>
+                <p class="o-score"> 0 </p>
+            </div>
         </div>
-        <div class="o-team">
-            <p>o team</p>
-            <p class="o-score"> 0 </p>
+        <div class="outline">
+            <div class="square" id="_1"></div>
+            <div class="square" id="_2"></div>
+            <div class="square" id="_3"></div>
+            <div class="square" id="_4"></div>
+            <div class="square" id="_5"></div>
+            <div class="square" id="_6"></div>
+            <div class="square" id="_7"></div>
+            <div class="square" id="_8"></div>
+            <div class="square" id="_9"></div>
         </div>
-    </div>
-    <div class="outline">
-        <div class="_1 square"></div>
-        <div class="_2 square"></div>
-        <div class="_3 square"></div>
-        <div class="_4 square"></div>
-        <div class="_5 square"></div>
-        <div class="_6 square"></div>
-        <div class="_7 square"></div>
-        <div class="_8 square"></div>
-        <div class="_9 square"></div>
     </div>
 </body>
 </html>
